# letterboxd-recommender

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: update_recs.yml
notebooks/: 01_data_exploration.ipynb  02_model_analysis.ipynb
src/: config.py
src/data/: history.py  letterboxd.py  merge.py  movielens.py  tmdb.py
src/deploy/: dynamo_writer.py
src/features/: feedback.py  profile.py  vectorize.py
src/model/: evaluate.py  knn_cf.py  lightfm_model.py  recommend.py  two_tower.py
src/scripts/: build_catalog.py  compare_models.py  download_movielens.py  generate_recs.py  weekly_update.py
